web2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web2-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nginx
            role: web
            instance: web2
    template:
        metadata:
            labels:
                app: nginx
                role: web
                instance: web2
        spec:
            nodeSelector:
                kubernetes.io/hostname: gke-socialmedia-prod-clu-default-pool-1cf9059e-6q97 # Replace with the name of Node 2
            containers:
                - name: nginx
                  image: gcr.io/socialmapp-f1941/nginx-pod:latest
                  ports:
                      - containerPort: 80
