db-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: db-service
spec:
    selector:
        app: db
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    type: ClusterIP
