web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web1-service
spec:
  selector:
    app: nginx
    role: web
    instance: web1
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
