nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-ingress
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        # Remove the rewrite-target annotation
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - socialmapp.duckdns.org
          secretName: socialmapp-tls # TLS certificate
    rules:
        - host: socialmapp.duckdns.org
          http:
              paths:
                  # Route API requests to the db-service without rewriting
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: db-service
                            port:
                                number: 8080
                  # Route all other requests to the Nginx (React) service
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nginx-service
                            port:
                                number: 80
